Removed deprecated primitive wrapper constructor calls